--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,8 @@ jobs:
 
       - name: Install GoReleaser
         run: |
-          curl -sL https://install.goreleaser.com/github.com/goreleaser/goreleaser.sh | bash
+          curl -sL https://github.com/goreleaser/goreleaser/releases/latest/download/goreleaser_Linux_x86_64.tar.gz | tar -xz
+          sudo mv goreleaser /usr/local/bin/
 
       - name: Run GoReleaser
         env:
